@@ -16,6 +16,7 @@ public class ArmorUtils
 {
     public static final float NOT_IN_GRID = -12345.6789f;
 
+    // FIXME: there's an off-by-one error somewhere in here
     public static int[] getArmorCellAtWorldCoord(ShipAPI ship, Vector2f loc)
     {
         // I'm aware that armor cells go beyond ship bounds, but
